fix: Some code check warns are fixed.