@@ -192,7 +192,7 @@ public class StatisticsServiceImpl implements StatisticsService {
         } else {
             List<GeneralStatisticsItem> listItems = new ArrayList<>();
             List<String> contextList = data.stream().map(GeneralStatisticsItem::getContext)
-                    .distinct().collect(Collectors.toList());
+                    .distinct().toList();
             contextList.forEach(contextValue -> {
                 List<GeneralStatisticsItem> details = new ArrayList<>();
                 GeneralStatisticsItem item = new GeneralStatisticsItem(contextValue, 0L, 0L, 0L, 0L);
@@ -231,7 +231,7 @@ public class StatisticsServiceImpl implements StatisticsService {
         setEnvironmentsNames(projectId, data.getItems());
         if (Objects.isNull(systemId)) {
             List<String> contextList = data.getItems().stream().map(ConsumedStatisticsItem::getContext)
-                    .distinct().collect(Collectors.toList());
+                    .distinct().toList();
             contextList.forEach(contextValue -> {
                 int datesNumber = data.getDates().size();
                 List<ConsumedStatisticsItem> details = new ArrayList<>();
@@ -299,7 +299,7 @@ public class StatisticsServiceImpl implements StatisticsService {
         setEnvironmentsNames(projectId, data.getItems());
         if (Objects.isNull(systemId)) {
             List<String> contextList = data.getItems().stream().map(OutdatedStatisticsItem::getContext)
-                    .distinct().collect(Collectors.toList());
+                    .distinct().toList();
             contextList.forEach(contextValue -> {
                 int datesNumber = data.getDates().size();
                 List<OutdatedStatisticsItem> details = new ArrayList<>();
@@ -351,7 +351,7 @@ public class StatisticsServiceImpl implements StatisticsService {
         DateStatistics dateStatistics = DateStatistics.concatDateStatistics(dataExisting, dataDeleted);
         if (Objects.isNull(systemId)) {
             List<String> contextList = dateStatistics.getItems().stream().map(DateStatisticsItem::getContext)
-                    .distinct().collect(Collectors.toList());
+                    .distinct().toList();
             contextList.forEach(contextValue -> {
                 int datesNumber = dateStatistics.getDates().size();
                 List<DateStatisticsItem> details = new ArrayList<>();
@@ -452,16 +452,16 @@ public class StatisticsServiceImpl implements StatisticsService {
         List<StatisticsReportElement> upToThreshold = new ArrayList<>();
         List<StatisticsReportElement> downToThreshold = new ArrayList<>();
         List<String> environments = reportStatistics.stream().map(StatisticsReport::getEnvironment).distinct()
-                .collect(Collectors.toList());
+                .toList();
         environments.forEach(env -> {
             List<String> filterSystem = reportStatistics.stream().filter(el -> env.equals(el.getEnvironment()))
                     .map(StatisticsReport::getSystem)
                     .distinct()
-                    .collect(Collectors.toList());
+                    .toList();
             filterSystem.forEach(system -> {
                 List<StatisticsReport> data = reportStatistics.stream()
                         .filter(el -> env.equals(el.getEnvironment()) && system.equals(el.getSystem()))
-                        .collect(Collectors.toList());
+                        .toList();
                 List<GeneralStatisticsItem> up = new ArrayList<>();
                 List<GeneralStatisticsItem> down = new ArrayList<>();
                 data.forEach(it -> {
@@ -587,7 +587,7 @@ public class StatisticsServiceImpl implements StatisticsService {
             List<String> userNames = testDataOccupy.stream()
                     .map(TestDataOccupyReportGroupBy::getOccupiedBy)
                     .distinct()
-                    .collect(Collectors.toList());
+                    .toList();
 
             userNames.forEach(userName -> {
                 UsersStatisticsReportElement usersStatisticsReportElement = new UsersStatisticsReportElement();
@@ -596,15 +596,15 @@ public class StatisticsServiceImpl implements StatisticsService {
                 usersStatisticsReportElement.setDates(getDateFormatFromDaysCount(daysCount));
 
                 List<TestDataOccupyReportGroupBy> testDataOccupyForUserName = testDataOccupy.stream()
-                        .filter(t -> t.getOccupiedBy().equals(userName)).collect(Collectors.toList());
+                        .filter(t -> t.getOccupiedBy().equals(userName)).toList();
 
                 List<String> tableNames =
                         testDataOccupyForUserName.stream().map(TestDataOccupyReportGroupBy::getTableName)
-                                .distinct().collect(Collectors.toList());
+                                .distinct().toList();
 
                 tableNames.forEach(tableName -> {
                     List<TestDataOccupyReportGroupBy> testDataOccupyForTableName = testDataOccupyForUserName.stream()
-                            .filter(t -> t.getTableName().equals(tableName)).collect(Collectors.toList());
+                            .filter(t -> t.getTableName().equals(tableName)).toList();
 
                     TestDataTableCatalog tableCatalog = catalogMap.get(tableName);
 
@@ -774,7 +774,7 @@ public class StatisticsServiceImpl implements StatisticsService {
                 LocalDate.parse(request.getDateFrom()));
         fillEnvironmentsAndSystems(tableValues,tables);
         int countOfRows = ((BigInteger) entityManager
-                .createNativeQuery(GET_COUNT_OF_ROWS.formatted(generatedQuery)).getResultList().get(0)).intValue();
+                .createNativeQuery(GET_COUNT_OF_ROWS.formatted(generatedQuery)).getResultList().getFirst()).intValue();
         return new UsersOccupyStatisticResponse(tableValues, countOfRows);
     }
 
@@ -834,11 +834,9 @@ public class StatisticsServiceImpl implements StatisticsService {
             csvHeader.append(datesString).append(",\n");
             fileWriter.write(csvHeader.toString());
             for (OccupiedDataByUsersStatistics table : response.getData()) {
-                SortedSet<LocalDate> keys = new TreeSet<LocalDate>(table.getData().keySet());
+                SortedSet<LocalDate> keys = new TreeSet<>(table.getData().keySet());
                 StringBuilder valuesString = new StringBuilder();
-                keys.forEach(date -> {
-                    valuesString.append(table.getData().get(date)).append(",");
-                });
+                keys.forEach(date -> valuesString.append(table.getData().get(date)).append(","));
 
                 StringBuilder build = new StringBuilder();
                 build
