@@ -91,7 +91,7 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
     private static final String DEFAULT_ASSIGNMENT = "across all";
     private static final String TABLE_NAME_FIRST = "test_table_statistic_availability_first";
     private static final String TABLE_NAME_SECOND = "test_table_statistic_availability_second";
-    private String cron = "0 0 9 ? * *";
+    private final String cron = "0 0 9 ? * *";
 
     private static final UUID systemIdSecond = UUID.randomUUID();
     private static final UUID environmentIdSecond = UUID.randomUUID();
@@ -127,7 +127,7 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
     private static final Project project = new Project() {{
         setName("Test Statistics Project");
         setId(projectId);
-        setEnvironments(Arrays.asList(environment));
+        setEnvironments(List.of(environment));
     }};
 
     private UsersOccupyStatisticRequest usersOccupyStatisticRequest;
@@ -172,14 +172,14 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
         availableItemFirst.setEnvironment(environment.getName());
         availableItemFirst.setSystem(system.getName());
         consumedItemFirstDays = new ConsumedStatisticsItem(TABLE_TITLE,
-                new ArrayList<Long>() {{
+                new ArrayList<>() {{
                     add(1L);
                     add(0L);
                 }});
         consumedItemFirstDays.setEnvironment(environment.getName());
         consumedItemFirstDays.setSystem(system.getName());
         consumedItemFirstWeeks = new ConsumedStatisticsItem(TABLE_TITLE,
-                new ArrayList<Long>() {{
+                new ArrayList<>() {{
                     add(1L);
                     add(0L);
                     add(0L);
@@ -192,7 +192,7 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
         consumedItemFirstWeeks.setEnvironment(environment.getName());
         consumedItemFirstWeeks.setSystem(system.getName());
         consumedItemFirstMonths = new ConsumedStatisticsItem(TABLE_TITLE,
-                new ArrayList<Long>() {{
+                new ArrayList<>() {{
                     add(1L);
                     add(0L);
                     add(0L);
@@ -202,22 +202,22 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
         consumedItemFirstMonths.setEnvironment(environment.getName());
         consumedItemFirstMonths.setSystem(system.getName());
         outdatedItemFirst = new OutdatedStatisticsItem(TABLE_TITLE,
-                new ArrayList<Long>() {{
+                new ArrayList<>() {{
                     add(5L);
                     add(0L);
                 }},
-                new ArrayList<Long>() {{
+                new ArrayList<>() {{
                     add(1L);
                     add(0L);
                 }},
-                new ArrayList<Long>() {{
+                new ArrayList<>() {{
                     add(0L);
                     add(0L);
                 }});
         outdatedItemFirst.setEnvironment(environment.getName());
         outdatedItemFirst.setSystem(system.getName());
         outdatedItemFirstWeeks = new OutdatedStatisticsItem(TABLE_TITLE,
-                new ArrayList<Long>() {{
+                new ArrayList<>() {{
                     add(5L);
                     add(0L);
                     add(0L);
@@ -227,7 +227,7 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
                     add(0L);
                     add(0L);
                 }},
-                new ArrayList<Long>() {{
+                new ArrayList<>() {{
                     add(1L);
                     add(0L);
                     add(0L);
@@ -237,7 +237,7 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
                     add(0L);
                     add(0L);
                 }},
-                new ArrayList<Long>() {{
+                new ArrayList<>() {{
                     add(0L);
                     add(0L);
                     add(0L);
@@ -250,21 +250,21 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
         outdatedItemFirstWeeks.setEnvironment(environment.getName());
         outdatedItemFirstWeeks.setSystem(system.getName());
         outdatedItemFirstMonths = new OutdatedStatisticsItem(TABLE_TITLE,
-                new ArrayList<Long>() {{
+                new ArrayList<>() {{
                     add(5L);
                     add(0L);
                     add(0L);
                     add(0L);
                     add(0L);
                 }},
-                new ArrayList<Long>() {{
+                new ArrayList<>() {{
                     add(1L);
                     add(0L);
                     add(0L);
                     add(0L);
                     add(0L);
                 }},
-                new ArrayList<Long>() {{
+                new ArrayList<>() {{
                     add(0L);
                     add(0L);
                     add(0L);
@@ -274,7 +274,7 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
         outdatedItemFirstMonths.setEnvironment(environment.getName());
         outdatedItemFirstMonths.setSystem(system.getName());
         createdWhenItemFirst = new DateStatisticsItem(TABLE_TITLE,
-                new ArrayList<Long>() {{
+                new ArrayList<>() {{
                     add(7L);
                     add(0L);
                 }});
@@ -292,29 +292,29 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
         availableItemSecond.setEnvironment(lazyEnvironmentSecond.getName());
         availableItemSecond.setSystem(systemSecond.getName());
         consumedItemSecond = new ConsumedStatisticsItem(TABLE_TITLE,
-                new ArrayList<Long>() {{
+                new ArrayList<>() {{
                     add(2L);
                     add(0L);
                 }});
         consumedItemSecond.setEnvironment(lazyEnvironmentSecond.getName());
         consumedItemSecond.setSystem(systemSecond.getName());
         outdatedItemSecond = new OutdatedStatisticsItem(TABLE_TITLE,
-                new ArrayList<Long>() {{
+                new ArrayList<>() {{
                     add(4L);
                     add(0L);
                 }},
-                new ArrayList<Long>() {{
+                new ArrayList<>() {{
                     add(2L);
                     add(0L);
                 }},
-                new ArrayList<Long>() {{
+                new ArrayList<>() {{
                     add(0L);
                     add(0L);
                 }});
         outdatedItemSecond.setEnvironment(lazyEnvironmentSecond.getName());
         outdatedItemSecond.setSystem(systemSecond.getName());
         DateStatisticsItem createdWhenItemSecond = new DateStatisticsItem(TABLE_TITLE,
-                new ArrayList<Long>() {{
+                new ArrayList<>() {{
                     add(2L);
                     add(0L);
                 }});
@@ -390,10 +390,10 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
         expectedStatistics.add(statistics);
         List<GeneralStatisticsItem> actualStatistics = statisticsService.getTestDataAvailability(projectId, null);
         List<GeneralStatisticsItem> details =
-                actualStatistics.get(0).getDetails().stream()
+                actualStatistics.getFirst().getDetails().stream()
                         .sorted(Comparator.comparingLong(GeneralStatisticsItem::getOccupied))
                         .collect(Collectors.toList());
-        actualStatistics.forEach(x -> {x.setDetails(details);});
+        actualStatistics.forEach(x -> x.setDetails(details));
 
         Assertions.assertEquals(expectedStatistics, actualStatistics);
     }
@@ -466,7 +466,7 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
         dates.add(LocalDate.now().format(formatter));
         dates.add(LocalDate.now().plusDays(1).format(formatter));
         ConsumedStatisticsItem statisticsItem = new ConsumedStatisticsItem(TABLE_TITLE,
-                new ArrayList<Long>() {{
+                new ArrayList<>() {{
                     add(3L);
                     add(0L);
                 }});
@@ -546,15 +546,15 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
         dates.add(LocalDate.now().format(formatter));
         dates.add(LocalDate.now().plusDays(1).format(formatter));
         OutdatedStatisticsItem statisticsItem = new OutdatedStatisticsItem(TABLE_TITLE,
-                new ArrayList<Long>() {{
+                new ArrayList<>() {{
                     add(9L);
                     add(0L);
                 }},
-                new ArrayList<Long>() {{
+                new ArrayList<>() {{
                     add(3L);
                     add(0L);
                 }},
-                new ArrayList<Long>() {{
+                new ArrayList<>() {{
                     add(0L);
                     add(0L);
                 }});
@@ -567,18 +567,18 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
         OutdatedStatistics actualStatistics = statisticsService.getTestDataConsumptionWhitOutdated(projectId, null,
                 LocalDate.now(), LocalDate.now().plusDays(1), 1);
 
-        List<OutdatedStatisticsItem> details = actualStatistics.getItems().get(0).getDetails();
+        List<OutdatedStatisticsItem> details = actualStatistics.getItems().getFirst().getDetails();
         List<OutdatedStatisticsItem> detailsSorted = new ArrayList<>();
         OutdatedStatisticsItem buf = null;
         for (OutdatedStatisticsItem x : details) {
-            if (x.getConsumed().get(0) == 1L) {
+            if (x.getConsumed().getFirst() == 1L) {
                 detailsSorted.add(x);
             } else {
                 buf = x;
             }
         }
         detailsSorted.add(buf);
-        actualStatistics.getItems().get(0).setDetails(detailsSorted);
+        actualStatistics.getItems().getFirst().setDetails(detailsSorted);
 
         Assertions.assertEquals(expectedStatistics, actualStatistics);
     }
@@ -607,7 +607,7 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
         dates.add(LocalDate.now().format(formatter));
         dates.add(LocalDate.now().plusDays(1).format(formatter));
         ConsumedStatisticsItem statisticsItem = new ConsumedStatisticsItem(TABLE_TITLE,
-                new ArrayList<Long>() {{
+                new ArrayList<>() {{
                     add(3L);
                     add(0L);
                 }});
@@ -667,10 +667,18 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
 
         UserGeneralStatisticsItem itemFirst = new UserGeneralStatisticsItem(
                 lazyEnvironment.getName(), lazySystem.getName(),
-                TABLE_TITLE, new ArrayList<Long>() {{add(0L); add(0L); add(1L);}});
+                TABLE_TITLE, new ArrayList<>() {{
+            add(0L);
+            add(0L);
+            add(1L);
+        }});
         UserGeneralStatisticsItem itemSecond = new UserGeneralStatisticsItem(
                 lazyEnvironmentSecond.getName(), lazySystemSecond.getName(),
-                TABLE_TITLE, new ArrayList<Long>() {{add(0L); add(0L); add(2L);}});
+                TABLE_TITLE, new ArrayList<>() {{
+            add(0L);
+            add(0L);
+            add(2L);
+        }});
         List<UserGeneralStatisticsItem> items = new ArrayList<>();
         items.add(itemFirst);
         items.add(itemSecond);
@@ -750,7 +758,7 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
         mockEnvForStatistics();
         UsersOccupyStatisticResponse respone = statisticsService.getOccupiedDataByUsers(usersOccupyStatisticRequest);
 
-        Assertions.assertEquals(respone.getRecords(),2);
+        Assertions.assertEquals(2, respone.getRecords());
     }
 
     @Test
@@ -759,7 +767,7 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
         mockEnvForStatistics();
         UsersOccupyStatisticResponse response = statisticsService.getOccupiedDataByUsers(usersOccupyStatisticRequest);
 
-        Assertions.assertEquals(response.getData().get(0).getContext(),"Test Data");
+        Assertions.assertEquals("Test Data", response.getData().getFirst().getContext());
     }
 
     @Test
@@ -768,7 +776,7 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
         mockEnvForStatistics();
         UsersOccupyStatisticResponse response = statisticsService.getOccupiedDataByUsers(usersOccupyStatisticRequest);
 
-        Assertions.assertEquals(response.getData().get(1).getUserName(),"TestUser");
+        Assertions.assertEquals("TestUser", response.getData().get(1).getUserName());
     }
 
     @Test
@@ -861,14 +869,11 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
             Assertions.assertNull(config.getDescription());
             Assertions.assertNull(config.getActiveColumnKey());
             Assertions.assertNull(config.getTablesColumns());
-        } catch (Exception e) {
-            throw e;
         } finally {
             deleteTestDataTableIfExists(tableName);
             catalogRepository.deleteByTableName(tableName);
         }
     }
-
 
     @Test
     public void availableStatistic_saveConfig_saved() {
@@ -887,8 +892,6 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
             AvailableDataStatisticsConfig actConfig = statisticsService.getAvailableStatsConfig(system2, environmentId);
 
             Assertions.assertEquals(config, actConfig);
-        } catch (Exception e){
-            throw e;
         } finally {
             deleteTestDataTableIfExists(tableName);
             catalogRepository.deleteByTableName(tableName);
@@ -905,16 +908,14 @@ public class StatisticsServiceTest extends AbstractTestDataTest {
             createTestDataTableCatalog(project, system2, environmentId, "gettingData", tableName);
             AvailableDataStatisticsConfig config = statisticsService.getAvailableStatsConfig(system2, environmentId);
             List<TableColumnValues> values = testDataService.getDistinctTablesColumnValues(system2, environmentId, "sim");
-            values.get(0).getValues().add("Empty stat");
+            values.getFirst().getValues().add("Empty stat");
             config.setTablesColumns(values);
             config.setDescription("Descirption");
             config.setActiveColumnKey("sim");
             statisticsService.saveAvailableStatsConfig(config);
             AvailableDataByColumnStats stats = statisticsService.getAvailableDataInColumn(system2, environmentId);
 
-            Assertions.assertEquals(Integer.valueOf(0), stats.getStatistics().get(0).getOptions().get("Empty stat"));
-        } catch (Exception e) {
-            throw e;
+            Assertions.assertEquals(Integer.valueOf(0), stats.getStatistics().getFirst().getOptions().get("Empty stat"));
         } finally {
             deleteTestDataTableIfExists(tableName);
             catalogRepository.deleteByTableName(tableName);
